tests/fixtures/valid/function_ref_params.dub
// Function with reference parameters.
fun swap(a : ref, b : ref) {
    var tmp = a;
    a = b;
    b = tmp;
}
