tests/fixtures/invalid/unknown_token.dub
// @ is not a valid token in dubsar.
fun bad() {
    @ = 1;
}
